[tool.poetry]
name = "twin-trades-backend"
version = "0.1.0"
description = "TwinTrades copy-trading backend API"
authors = ["TwinTrades Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
gunicorn = "^22.0.0"

# Database
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
asyncmy = "^0.2.9"
alembic = "^1.13.0"

# Validation
pydantic = { extras = ["email"], version = "^2.7.0" }
pydantic-settings = "^2.3.0"

# Auth / security
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pyotp = "^2.9.0"
cryptography = "^42.0.0"

# Rate limiting
slowapi = "^0.1.9"

# Scheduling
apscheduler = "^3.10.4"

# Push notifications
aioapns = "^3.0"

# Email
aiosmtplib = "^3.0.0"
jinja2 = "^3.1.0"

# Apple / StoreKit
app-store-server-library = ">=1.0.0"

# Logging
structlog = "^24.1.0"

# AWS S3 (optional)
aioboto3 = "^13.0.0"

# Twilio (SMS)
twilio = "^9.0.0"

# HTTP client for brokerage APIs
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
